# transfer-learning-image-classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: transfer_learning_evaluation.ipynb
src/: dataset.py  evaluate.py  model.py  train.py  utils.py
