[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transfer_learning_image_classification"
version = "1.0.0"
description = "Image Classification using Transfer Learning with PyTorch"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]